<resources>
  <string name="app_name">QualityTest</string>
  <string name="nav_receipt">Receipt</string>
  <string name="nav_personal">Personal</string>
  <string name="input_barcode_hint">输入序列号</string>
  <string name="confirm">确认</string>
  <string name="scan_hint">点击扫码</string>
  <string name="estimated">已评价</string>
  <string name="un_estimated">未评价</string>

  <string name="receipt_check_comments">查看质检结果</string>
  <string name="receipt_evaluate">去评价</string>
  <string name="personal_company_label">公司</string>
  <string name="personal_name_label">姓名</string>
  <string name="personal_worker_number_label">分组</string>
  <string name="login_input_account_hint">请输入账号</string>
  <string name="login_input_passwd_hint">请输入密码</string>
  <string name="login">登录</string>
  <string name="login_forget_passwd">忘记密码?</string>
  <string name="forget_pwd">忘记密码</string>
  <string name="login_sign_up">新用户</string>

  <!--login-->
  <string name="login_error">登录失败，请检查用户名或密码!</string>
  <string name="slogan">供销一站式交易及融资平台</string>

  <string name="evaluate_hint">请输入评价</string>
  <!--setting-->
  <string name="setting">设置</string>
  <string name="modify_pwd">修改密码</string>
  <string name="hint_modify_old_pwd">请输入旧密码</string>
  <string name="hint_modify_new_pwd">请输入旧密码</string>
  <string name="hint_modify_re_pwd">请确认密码</string>
  <string name="login_out">退出登录</string>
  <string name="modify_error">修改失败，请检查密码是否正确!</string>
  <string name="hint_forget_pwd">请联系所属上级管理员更新密码</string>

</resources>
