<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:padding="@dimen/space.medium"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/slogan"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/white"
      />

  <EditText
      android:id="@id/login_et_username"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_edit_text"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@drawable/bg_et_round_white"
      android:hint="@string/login_input_account_hint"
      android:inputType="phone"
      android:maxLength="11"
      android:paddingLeft="@dimen/space.small"
      android:paddingRight="@dimen/space.small"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      />

  <EditText
      android:id="@id/login_et_passwd"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_edit_text"
      android:layout_marginTop="@dimen/space.small"
      android:background="@drawable/bg_et_round_white"
      android:hint="@string/login_input_passwd_hint"
      android:inputType="textPassword"
      android:maxLength="18"
      android:paddingLeft="@dimen/space.small"
      android:paddingRight="@dimen/space.small"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      />

  <Button
      android:id="@id/btn_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@drawable/bg_btn_round_green"
      android:text="@string/login"
      style="@style/Widget.AppCompat.Button.Colored"
      />

  <TextView
      android:id="@id/login_tv_forget_passwd"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:padding="@dimen/space.medium"
      android:text="@string/login_forget_passwd"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/white"
      />

  <ProgressBar
      android:id="@id/progress_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:visibility="gone"
      style="@style/Widget.AppCompat.ProgressBar"
      />
</LinearLayout>