<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@id/root_layout"
    >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="?android:actionBarSize"
      android:background="@color/colorPrimary"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/modify_pwd"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />
    <ImageView
        android:id="@id/ic_back_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_arrow_left"
        android:layout_centerVertical="true"
        android:padding="10dp"/>
  </RelativeLayout>
  <EditText
      android:id="@id/modify_pwd_old"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_edit_text"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@drawable/bg_et_round_black"
      android:hint="@string/hint_modify_old_pwd"
      android:inputType="textPassword"
      android:paddingLeft="@dimen/space.small"
      android:paddingRight="@dimen/space.small"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/black"
      android:textColorHint="#9E9E9E"
      android:layout_marginLeft="@dimen/space.medium"
      android:layout_marginStart="@dimen/space.medium"
      android:layout_marginRight="@dimen/space.medium"
      android:layout_marginEnd="@dimen/space.medium"
      />
  <EditText
      android:id="@id/modify_pwd_new"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_edit_text"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@drawable/bg_et_round_black"
      android:hint="@string/hint_modify_new_pwd"
      android:layout_marginLeft="@dimen/space.medium"
      android:layout_marginStart="@dimen/space.medium"
      android:layout_marginRight="@dimen/space.medium"
      android:layout_marginEnd="@dimen/space.medium"
      android:inputType="textPassword"
      android:paddingLeft="@dimen/space.small"
      android:paddingRight="@dimen/space.small"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/black"
      android:textColorHint="#9E9E9E"
      />
  <EditText
      android:id="@id/modify_re_pwd"
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_edit_text"
      android:layout_marginTop="@dimen/space.medium"
      android:background="@drawable/bg_et_round_black"
      android:hint="@string/hint_modify_re_pwd"
      android:layout_marginLeft="@dimen/space.medium"
      android:layout_marginStart="@dimen/space.medium"
      android:layout_marginRight="@dimen/space.medium"
      android:layout_marginEnd="@dimen/space.medium"
      android:inputType="textPassword"
      android:paddingLeft="@dimen/space.small"
      android:paddingRight="@dimen/space.small"
      android:textAppearance="@style/TextAppearance.AppCompat.Body1"
      android:textColor="@color/black"
      android:textColorHint="#9E9E9E"
      />
  <Button
      android:id="@id/btn_confirm"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/space.large"
      android:background="@drawable/bg_btn_round_blue"
      android:text="@string/confirm"
      style="@style/Widget.AppCompat.Button.Colored"
      android:layout_marginLeft="@dimen/space.medium"
      android:layout_marginStart="@dimen/space.medium"
      android:layout_marginRight="@dimen/space.medium"
      android:layout_marginEnd="@dimen/space.medium"
      />
  <ProgressBar
      android:id="@id/progress_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="@dimen/space.small"
      android:visibility="gone"
      style="@style/Widget.AppCompat.ProgressBar"
      />
</LinearLayout>