<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:divider="@drawable/divider_horizontal"
    android:orientation="vertical"
    android:showDividers="middle"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/height_header"
      android:background="@color/colorPrimary"
      android:padding="@dimen/space.medium"
      >

    <ImageView
        android:id="@id/personal_iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="@dimen/space.medium"
        android:src="@drawable/ic_settings"
        />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@id/personal_sdv_avatar"
        android:layout_width="@dimen/img_big"
        android:layout_height="@dimen/img_big"
        android:layout_centerInParent="true"
        app:placeholderImage="@drawable/ic_avatar"
        app:roundAsCircle="true"
        />
  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:padding="@dimen/space.medium"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_company_label"
        />

    <TextView
        android:id="@id/personal_tv_company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="company"
        />

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:padding="@dimen/space.medium"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_name_label"
        />

    <TextView
        android:id="@id/personal_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="Name"
        />

  </RelativeLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/white"
      android:padding="@dimen/space.medium"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_worker_number_label"
        />

    <TextView
        android:id="@id/personal_tv_class_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text="88"
        />

  </RelativeLayout>

</LinearLayout>